--- a/UI/harmonique-frontend/src/app/home/home.component.html
+++ b/UI/harmonique-frontend/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home-container" [class.expanded]="isSidebarExpanded">  
-<div class="container-fluid p-4">
+<div class="container-fluid">
     <div class="d-flex justify-content-between align-items-center mb-3 head-container">
         <h5 class="head mb-0">Uploaded Songs</h5>
         <div>
