--- a/UI/harmonique-frontend/src/app/shared/footer/footer.component.scss
+++ b/UI/harmonique-frontend/src/app/shared/footer/footer.component.scss
@@ -45,7 +45,7 @@
 }
 
 .bottom-player {
-    background: linear-gradient(to bottom, #af9ce3, #89d4cf);
+    background: #1c3d8a;
     height: 90px;
     // border-top: 1px solid #222;
     color: white;
