--- a/UI/harmonique-frontend/src/app/shared/sidebar/sidebar.component.scss
+++ b/UI/harmonique-frontend/src/app/shared/sidebar/sidebar.component.scss
@@ -34,7 +34,7 @@
 .nav-menu a {
     display: flex;
     align-items: center;
-    padding: 10px 15px;
+    padding: 10px;
     color: white;
     text-decoration: none;
     border-radius: 8px;
