Search API & Liked Songs API

--- a/UI/harmonique-frontend/src/app/home/about-us/about-us.component.scss
+++ b/UI/harmonique-frontend/src/app/home/about-us/about-us.component.scss
@@ -18,7 +18,7 @@
 
   /* Hero Section */
   .hero {
-    background: linear-gradient(135deg, #6e45e2 0%, #89d4cf 100%);
+    background: #3066e2;
     color: white;
     padding: 100px 0;
     text-align: center;
@@ -107,7 +107,7 @@
 
   /* Features Section */
   .features {
-    background-color: #f9f9f9;
+    background-color: #3066e2;
     padding: 80px 0;
 
     h2 {
