--- a/UI/harmonique-frontend/src/app/shared/navbar/navbar.component.html
+++ b/UI/harmonique-frontend/src/app/shared/navbar/navbar.component.html
@@ -5,8 +5,11 @@
     <!-- Search Bar -->
     <div class="search-bar mx-auto position-relative">
         <i class="bi bi-search position-absolute top-50 start-0 translate-middle-y ps-2 text-muted"></i>
-        <input type="text" [(ngModel)]="searchQuery" class="form-control ps-5 rounded-pill"
-            placeholder="Search for your favourites..." />
+        <!-- <input type="text" [(ngModel)]="searchQuery" class="form-control ps-5 rounded-pill"
+            placeholder="Search for your favourites..." /> -->
+        <input type="text" [(ngModel)]="searchQuery" (keydown.enter)="handleSearch()"
+            class="form-control ps-5 rounded-pill" placeholder="Search for your favourites..." />
+
     </div>
 
     <!-- User Actions -->
