--- a/UI/harmonique-frontend/src/app/home/home.component.scss
+++ b/UI/harmonique-frontend/src/app/home/home.component.scss
@@ -8,9 +8,16 @@
 
 .container-fluid {
     margin-top: 60px;
+    margin-bottom: 90px;
     background: #3066e2;
-    //height: 200vh;
 }
+
+.head-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 25px 20px 10px 20px;
+  }  
 
 .song-grid {
     display: grid;
@@ -25,9 +32,35 @@
     display: flex;
     flex-direction: column;
     align-items: start;
-    /* padding: 8px; */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     border-radius: 8px; /* optional: to smoothen the corners */
+    position: relative; // ✅ Needed for icon overlay
+
+    &:hover .icon-overlay {
+    opacity: 1;
+    pointer-events: auto;
+  }
+}
+
+.icon-overlay {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+  z-index: 2;
+
+  button {
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+  }
 }
 
 .album-img {
@@ -42,13 +75,22 @@ mat-card-title {
     font-weight: 600;
     font-size: 16px;
     color: rgb(184, 136, 136);
-    padding: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 10px;
 }
 
 mat-card-subtitle {
     font-size: 12px;
     color: #ffffff;
-    padding: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 10px;
+}
+
+.mat-mdc-card-content {
+    display: block;
+    padding: 0px 0px;
+}
+
+.mat-mdc-card-content:last-child {
+    padding-bottom: 8px;
 }
 
 .head {
@@ -63,19 +105,8 @@ mat-card-subtitle {
 
 }
 
-// .album-title {
-//     font-weight: 600;
-//     font-size: 1rem;
-//     color: rgb(219, 219, 219);
-// }
-
-// .album-artist {
-//     font-size: 0.75rem;
-//     color: #c9d1db;
-// }
-
 .btn-primary {
-    background: linear-gradient(to right, #af9ce3, #89d4cf);
+    background: #6e45e2;
     border-color: #ffffff;
     justify-items: end;
 }
