--- a/UI/harmonique-frontend/src/app/home/home.component.html
+++ b/UI/harmonique-frontend/src/app/home/home.component.html
@@ -1,6 +1,5 @@
-<div class="home-container" [class.expanded]="isSidebarExpanded">
-    <div class="container-fluid">
-        <!-- <div class="d-flex justify-content-between align-items-center mb-3 head-container"> -->
+<div class="container-fluid">
+    <div class="home-container" [class.expanded]="isSidebarExpanded">
         <div class="head-container">
             <h5 class="head mb-0">Uploaded Songs</h5>
             <div>
@@ -10,29 +9,24 @@
         </div>
 
         <div class="song-grid">
-            <!-- <mat-card class="song-card" *ngFor="let song of backendSongs; let i = index" (click)="playBackendSong(i)">
+            <mat-card class="song-card" *ngFor="let song of backendSongs; let i = index" (click)="playBackendSong(i)">
+                <div class="icon-overlay" (click)="$event.stopPropagation()">
+                    <button mat-icon-button (click)="downloadSong(song.id)">
+                        <img [src]="'assets/insta-downloaded.png'" alt="like icon" class="icon">
+                    </button>
+
+                    <button mat-icon-button (click)="toggleLike(song.id)">
+                        <img [src]="'assets/' + (song.isLiked ? 'insta-heart-solid.png' : 'insta-heart-border.png')"
+                            alt="like icon" class="icon">
+                    </button>
+                </div>
+
                 <img mat-card-image [src]="song.image || '../assets/Mask Group.png'" alt="cover" class="album-img">
                 <mat-card-content>
                     <mat-card-title>{{ song.title }}</mat-card-title>
                     <mat-card-subtitle>{{ song.artist }}</mat-card-subtitle>
                 </mat-card-content>
-            </mat-card> -->
-            <mat-card class="song-card" *ngFor="let song of backendSongs; let i = index" (click)="playBackendSong(i)">
-    <div class="icon-overlay" (click)="$event.stopPropagation()">
-        <button mat-icon-button (click)="downloadSong(song.id)">
-            <mat-icon>file_download</mat-icon>
-        </button>
-        <button mat-icon-button (click)="toggleLike(song.id)">
-            <mat-icon>{{ likedSongIds.includes(song.id) ? 'favorite' : 'favorite_border' }}</mat-icon>
-        </button>
-    </div>
-    <img mat-card-image [src]="song.image || '../assets/Mask Group.png'" alt="cover" class="album-img">
-    <mat-card-content>
-        <mat-card-title>{{ song.title }}</mat-card-title>
-        <mat-card-subtitle>{{ song.artist }}</mat-card-subtitle>
-    </mat-card-content>
-</mat-card>
-
+            </mat-card>
         </div>
     </div>
 </div>
