--- a/UI/harmonique-frontend/src/app/login/login.component.html
+++ b/UI/harmonique-frontend/src/app/login/login.component.html
@@ -1,4 +1,7 @@
 <div class="login-wrapper">
+  <div class="title-container text-center">
+    <span class="title">Harmonique</span>
+  </div>
   <div class="music-notes">
     <span class="music-note" style="left: 10%; animation-delay: 0s;">♬</span>
     <span class="music-note" style="left: 30%; animation-delay: 1s;">♪</span>
