--- a/UI/harmonique-frontend/src/app/shared/footer/footer.component.scss
+++ b/UI/harmonique-frontend/src/app/shared/footer/footer.component.scss
@@ -45,7 +45,8 @@
 }
 
 .bottom-player {
-    background: #1c3d8a;
+    //background: #0d1117;
+    background: #222831;
     height: 90px;
     // border-top: 1px solid #222;
     color: white;
