--- a/UI/harmonique-frontend/src/app/app.component.scss
+++ b/UI/harmonique-frontend/src/app/app.component.scss
@@ -7,7 +7,7 @@
 .app-layout {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: calc(100vh - 90px); // subtract footer height
 }
 
 app-navbar {
@@ -17,14 +17,15 @@ app-navbar {
     top: 0;
     left: 0;
     z-index: 1001;
-    background-color: #053f59;
+    background-color: #393E46;
 }
 
 .app-content {
     display: flex;
     flex: 1;
-    // margin-top: 60px;
-    height: calc(100vh - 60px);
+    margin-top: 60px; // push below navbar
+    height: calc(100vh - 60px - 90px); // subtract navbar + footer
+    overflow: hidden;
 }
 
 .sidebar-wrapper {
@@ -54,7 +55,7 @@ app-navbar {
 .main-content {
     flex: 1;
     padding: 0px;
-    background-color: #f5f5f5;
+    background: #393E46;
     overflow-y: auto;
     height: 100%;
     scrollbar-width: none;
