--- a/UI/harmonique-frontend/src/app/home/liked-songs/liked-songs.component.scss
+++ b/UI/harmonique-frontend/src/app/home/liked-songs/liked-songs.component.scss
@@ -1,7 +1,152 @@
+// .container-fluid {
+//     margin-top: 60px;
+//     margin-bottom: 90px;
+//     background: #3066e2;
+//     height: 100vh;
+// }
+
 .container-fluid {
-    background: linear-gradient(135deg, #6e45e2 0%, #89d4cf 100%);
-    margin-top: 60px;
-    margin-bottom: 90px;
-    background: #3066e2;
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    //background: #3066e2;
+    overflow-y: auto;
+    padding: 16px 20px;
+    color: white;
+}
+
+// .song-card {
+//     margin-bottom: 20px;
+//     background: rgba(255, 255, 255, 0.1);
+//     border-radius: 8px;
+//     padding: 10px;
+
+//     mat-card {
+//         background: transparent;
+//         color: white;
+//     }
+
+//     mat-card-title {
+//         font-size: 18px;
+//         font-weight: bold;
+//     }
+
+//     mat-card-subtitle {
+//         font-size: 14px;
+//         color: #ddd;
+//     }
+// }
+
+/* Song card grid */
+.song-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    gap: 30px;
+    padding: 16px;
+}
+
+.song-card {
+    //height: 250px;
+    aspect-ratio: 1 / 1.3; // square-ish
+    width: 100%; // grid defines width
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    position: relative;
+    overflow: hidden;
+    background: rgba(0, 0, 0, 0.253);
+    color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    border-radius: 8px;
+    transition: 0.5s ease;
+
+    &:hover {
+        transform: scale(1.05);
+    }
+
+    &:hover .icon-overlay {
+        opacity: 1;
+        pointer-events: auto;
+    }
+
+    .album-img {
+        width: 100%;
+        aspect-ratio: 1 / 1;
+        object-fit: cover;
+        border-radius: 8px;
+    }
+
+    mat-card-content {
+        display: block;
+        padding: 0;
+    }
+
+    mat-card-title {
+        font-weight: 550;
+        // font-size: 16px;
+        font-size: clamp(0.9rem, 1.5vw, 1.1rem);
+        color: white;
+        padding: 2px 10px 0;
+        white-space: normal;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        line-clamp: 1;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    mat-card-subtitle {
+        // font-size: 12px;
+        font-size: clamp(0.8rem, 1.2vw, .5rem);
+        color: #ffffff;
+        padding: 0px 10px;
+        white-space: normal;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        line-clamp: 1;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
+
+/* Like & Download button overlay on song */
+.icon-overlay {
+    position: absolute;
+    bottom: 0px;
+    right: 5px;
+    display: flex;
+    flex-direction: row;
+    gap: 0px;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.5s ease;
+    z-index: 2;
+
+    button {
+        background-color: rgba(255, 255, 255, 0);
+        color: white;
+        border-radius: 50%;
+        width: 36px;
+        height: 36px;
+        border: none;
+
+        img {
+            width: 30px;
+            height: 30px;
+            object-fit: contain;
+            transition: transform 0.4s ease;
+        }
+
+        &:hover img {
+            transform: scale(1.1);
+        }
+    }
+}
+
+p {
+    padding: 20px;
+    font-size: 18px;
+    text-align: center;
 }
