--- a/UI/harmonique-frontend/src/app/shared/sidebar/sidebar.component.scss
+++ b/UI/harmonique-frontend/src/app/shared/sidebar/sidebar.component.scss
@@ -16,7 +16,8 @@
 .sidebar {
     width: 100%;
     height: 100%;
-    background: #1c3d8a;
+    //background: #0d1117;
+    background: #222831;
     color: #fff;
     padding: 1rem 0.5rem;
 }
