--- a/UI/harmonique-frontend/src/app/app.component.html
+++ b/UI/harmonique-frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="layoutClass">
+<div *ngIf="showLayout" [ngClass]="layoutClass">
   <div class="app-layout">
     <div *ngIf="showNavAndSidebar">
       <app-navbar></app-navbar>
@@ -14,6 +14,10 @@
       </div>
     </div>
   </div>
-
   <app-footer *ngIf="showFooter"></app-footer>
+</div>
+
+<!-- Minimal layout for login/register -->
+<div *ngIf="!showLayout" class="auth-wrapper">
+  <router-outlet></router-outlet>
 </div>
