--- a/UI/harmonique-frontend/src/app/home/home.component.html
+++ b/UI/harmonique-frontend/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="home-container" [class.expanded]="isSidebarExpanded">
+    <div class="home-container no-select" [class.expanded]="isSidebarExpanded">
         <div class="head-container">
             <h5 class="head mb-0">Uploaded Songs</h5>
             <div>
