--- a/UI/harmonique-frontend/src/app/register/register.component.scss
+++ b/UI/harmonique-frontend/src/app/register/register.component.scss
@@ -323,3 +323,30 @@
         opacity: 1;
     }
 }
+
+.profile-picture {
+  object-fit: cover;
+  border: 2px solid #ccc;
+}
+
+.icon-left {
+  margin-left: 15px;
+  color: white;
+}
+
+.password-toggle-icon {
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: white;
+}
+
+.comment-icon {
+  top: 0;
+  start: 0;
+  margin-left: 15px;
+  color: white;
+  margin-top: 1rem; // matches mt-3
+}
